Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15133

don't deactivate OST upon normal precreate error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      If osp_get_lastfid_from_ost() RPC failed, it will deactivate OST to let user to handle bad OST, but there may be different kinds of errors, some may be trivial, e.g. network issue, it's not necessary to deactivate OST in such cases. Among all the errors, -EFAULT means reading LAST_ID on OST failed, and it should only deactivate OST in this case.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: